--- a/goit-js-hw-08/css/styles.css
+++ b/goit-js-hw-08/css/styles.css
@@ -62,6 +62,9 @@ body {
 /* Lightbox */
 .lightbox {
   position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 100vw;
@@ -83,19 +86,17 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1;
 }
 
 .lightbox__content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   transform: scale(0.9);
   transition: transform 200ms ease-in-out;
+  z-index: 2;
 }
 
 .lightbox__image {
@@ -131,6 +132,7 @@ body {
   background-position: center;
   background-size: 60%;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 .lightbox__button:hover,
