--- a/goit-js-hw-13/src/styles.css
+++ b/goit-js-hw-13/src/styles.css
@@ -29,11 +29,17 @@ body {
 }
 
 .container {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   width: 1200px;
 }
 
+.search-form input {
+  margin-top: 10px;
+  padding: 5px 0;
+}
+
 .gallery {
+  margin: 30px auto;
   padding: 0;
   list-style: none;
   display: flex;
@@ -54,4 +60,15 @@ body {
   margin: 0;
   display: flex;
   align-items: center;
+}
+
+.load-more-btn {
+  margin: 0 auto 10px;
+  display: block;
+  padding: 10px 40px;
+  text-transform: uppercase;
+}
+
+.load-more-btn.is-hidden {
+  display: none;
 }
